--- a/css.css
+++ b/css.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0px;
+}
+main,article,nav,head,footer{
+    border: 1px solid black;
+}
 article{
     grid-area: a;
 }
@@ -6,4 +12,16 @@ nav{
 }
 head{
     grid-area: h;
+}
+footer{
+    grid-area: f;
+}
+main{
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-areas: 
+    "h h h" 
+    "n n n"
+    "a a a"
+    "f f f";
 }
