--- a/css.css
+++ b/css.css
@@ -44,3 +44,14 @@ main{
     "a a a"
     "f f f";
 }
+.olcso{
+    background-color: rgb(37, 92, 105);
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: 
+    "m m m"
+    "m m m";
+}
+.marka{
+    grid-area: m;
+}
