--- a/css.css
+++ b/css.css
@@ -44,7 +44,7 @@ main{
     "a a a"
     "f f f";
 }
-.olcso{
+.oldal{
     background-color: rgb(37, 92, 105);
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
