--- a/media_responsice.css
+++ b/media_responsice.css
@@ -25,7 +25,7 @@ main{
     "a a a"
     "f f f";
 }
-.olcso{
+.oldal{
     background-color: rgb(37, 92, 105);
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -48,7 +48,7 @@ main{
     .kep{
         width: 60%;
     }
-    .olcso{
+    .oldal{
         background-color: rgb(37, 92, 105);
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
@@ -72,7 +72,7 @@ main{
     .kep{
         width: 40%;
     }
-    .olcso{
+    .oldal{
         background-color: rgb(37, 92, 105);
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
